--- a/app/src/main/res/layout/activity_login_alternate.xml
+++ b/app/src/main/res/layout/activity_login_alternate.xml
@@ -8,7 +8,7 @@
     android:background="#212121">
 
     <TextView
-        android:text="🚀 Bienvenido Alternativo"
+        android:text="Bienvenida Alternativa"
         android:textSize="24sp"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
