--- a/app/src/main/res/layout/activity_episode_detail.xml
+++ b/app/src/main/res/layout/activity_episode_detail.xml
@@ -15,7 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-
     <TextView
         android:id="@+id/detailCode"
         android:text="Código"
@@ -30,4 +29,27 @@
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <!-- 🧠 NUEVO: contenedor para las imágenes -->
+    <TextView
+        android:text="Personajes:"
+        android:textStyle="bold"
+        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:fillViewport="true"
+        android:scrollbars="horizontal">
+
+        <LinearLayout
+            android:id="@+id/charactersContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+    </ScrollView>
 </LinearLayout>
